# skani-vMAG

./: .gitignore  Cargo.toml  pyproject.toml
python/: _preprocess.py  preprocess.py  skani-vMAG.py
src/: cli.rs  main.rs
src/vskani/: __init__.py  main.py
src/vskani/mcl/: __init__.py  _cli.py  utils.py
src/vskani/skani/: __init__.py  _cli.py  preprocess.py  vskani.py
src/vskani/utils/: __init__.py  cli.py  manager.py
